done styling stats

--- a/src/index.css
+++ b/src/index.css
@@ -149,3 +149,159 @@ background: #F3F3F3;
 
 
 }
+
+
+
+.bug {
+  background: #92BC2C;
+  box-shadow: 0 0 20px #92BC2C;
+}
+
+.dark {
+  background: #595761;
+  box-shadow: 0 0 20px #595761;
+}
+
+.dragon {
+  background: #0C69C8;
+  box-shadow: 0 0 20px #0C69C8;
+}
+
+.electric {
+  background: #F2D94E;
+  box-shadow: 0 0 20px #F2D94E;
+}
+
+.fire {
+  background: #FBA54C;
+  box-shadow: 0 0 20px #FBA54C;
+}
+
+.fairy {
+  background: #EE90E6;
+  box-shadow: 0 0 20px #EE90E6;
+}
+
+.fighting {
+  background: #D3425F;
+  box-shadow: 0 0 20px #D3425F;
+}
+
+.flying {
+  background: #A1BBEC;
+  box-shadow: 0 0 20px #A1BBEC;
+}
+
+.ghost {
+  background: #5F6DBC;
+  box-shadow: 0 0 20px #5F6DBC;
+}
+
+.grass {
+  background: #5FBD58;
+  box-shadow: 0 0 20px #5FBD58;
+}
+
+.ground {
+  background: #DA7C4D;
+  box-shadow: 0 0 20px #DA7C4D;
+}
+
+.ice {
+  background: #75D0C1;
+  box-shadow: 0 0 20px #75D0C1;
+}
+
+.normal {
+  background: #A0A29F;
+  box-shadow: 0 0 20px #A0A29F;
+}
+
+.poison {
+  background: #B763CF;
+  box-shadow: 0 0 20px #B763CF;
+}
+
+.psychic {
+  background: #FA8581;
+  box-shadow: 0 0 20px #FA8581;
+}
+
+.rock {
+  background: #C9BB8A;
+  box-shadow: 0 0 20px #C9BB8A;
+}
+
+.steel {
+  background: #5695A3;
+  box-shadow: 0 0 20px #5695A3;
+}
+
+.water {
+  background: #539DDF;
+  box-shadow: 0 0 20px #539DDF;
+}
+
+
+
+.icon {
+  border-radius: 100%;
+  height: 100px;
+  width: 100px;
+  margin:auto;
+  transition: 200ms all;
+}
+
+.stats{
+  margin-bottom: 0 !important;
+}
+
+.underline{
+  width: 60px;
+  height: 2px;
+  margin: 0 auto;
+  background-color: #595761;
+}
+
+.card{
+  border-radius: 1.5rem !important;
+  min-height: 20vh !important;
+  
+}
+
+
+
+.card-img-container{
+  background-color: #f5f3f4;
+  border-top-left-radius: 1rem !important;
+  border-top-right-radius: 1rem !important;
+}
+
+.card-body{
+  background-color: #ffffff;
+}
+
+.attack-bar{
+  background-color: #F08030 !important;
+}
+
+.defense-bar{
+  background-color:#F8D030 !important;
+}
+
+.hp-bar{
+  background-color: #FF0000 !important;
+}
+
+.speed-bar{
+  background-color: #F85888 !important;
+}
+
+.special-defense-bar{
+  background-color: #78C850 !important;
+}
+
+.special-attack-bar{
+  background-color: #6890F0 !important;
+}
+
